# nano-claude-code

./: README.md  pyproject.toml
src/nano/: agent.py  commands.py  main.py  memory.py  permissions.py  tools.py  ui.py
