[project]
name = "nano-claude-code"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "rich>=13.0.0",
]

[project.scripts]
nano-claude-code = "nano.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nano"]
